# diesel-scm

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CloneDialog.h  CloneDialog.ui  CommitDialog.cpp  CommitDialog.h  CommitDialog.ui  FileActionDialog.cpp  FileActionDialog.h  FileActionDialog.ui  FileTableView.cpp  FileTableView.h  LoggedProcess.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  RepoDialog.cpp  RepoDialog.h  RepoDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Utils.cpp  Utils.h  appveyor.yml  conanfile.py  conanfile.txt  fuel.pro  main.cpp  manifest  manifest.uuid  qtfossil.pro  resources.qrc  xmake.lua
.github/workflows/: build.yml
cmake/: resources.cmake  resources_autogenerated.qrc.in
debian/: changelog  fuel.install  menu  watch
doc/: Building.md  Building.txt  Changes.md  Changes.txt
ext/qtkeychain/: CMakeLists.txt  ReadMe.md  libsecret.cpp  qt5keychain.pri
ext/qtkeychain/translations/: qtkeychain_de.ts  qtkeychain_fr.ts  qtkeychain_ro.ts  qtkeychain_ru.ts  qtkeychain_zh.ts
icons/: IconCredits.txt  fuel.icns
installer/: fuel.iss
intl/: convert.bat  convert.sh  de_DE.ts  el_GR.po  el_GR.ts  en_US.pot  en_US.ts  es_ES.ts  fr_FR.ts  id.ts  it_IT.ts  ko_KR.ts  mkbase.sh  nl_NL.ts  pt_PT.ts  ru_RU.ts  ta.ts  uk.ts  update.sh  zh_Hans.ts
recipes/qtkeychain/: conandata.yml  conanfile.py
rsrc/: diesel.desktop  diesel.rc  fuel.desktop  fuel.rc  languages.qrc  resources.qrc
rsrc/docs/: Licenses.txt  Translators.txt
rsrc/icons/: IconCredits.txt
src/: AboutDialog.cpp  AboutDialog.h  AppSettings.cpp  AppSettings.h  Bridge.cpp  Bridge.h  BrowserWidget.cpp  BrowserWidget.h  CloneDialog.cpp  CloneDialog.h  CommitDialog.cpp  CommitDialog.h  CustomWebView.cpp  CustomWebView.h  FileActionDialog.cpp  FileActionDialog.h  FileTableView.cpp  FileTableView.h  Fossil.cpp  Fossil.h  FslSettingsDialog.cpp  FslSettingsDialog.h  LoggedProcess.cpp  LoggedProcess.h  MainWindow.cpp  MainWindow.h  RemoteDialog.cpp  RemoteDialog.h  RevisionDialog.cpp  RevisionDialog.h  SearchBox.cpp  SearchBox.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  UpdateCheckDialog.cpp  UpdateCheckDialog.h  UpdateDialog.cpp  UpdateDialog.h  (+6 more)
tools/: git-push.sh  pack.sh
ui/: AboutDialog.ui  BrowserWidget.ui  CloneDialog.ui  CommitDialog.ui  FileActionDialog.ui  FslSettingsDialog.ui  MainWindow.ui  RemoteDialog.ui  RevisionDialog.ui  SettingsDialog.ui  UpdateCheckDialog.ui  UpdateDialog.ui
